force-app/main/default/objects/Preferred_vendor__c/Preferred_vendor__c.object-meta.xml
<CustomObject>
    <label>Preferred vendor</label>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>Preferred vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>