force-app/main/default/objects/Preferred_vendor__c/fields/Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fees__c</fullName>
    <inlineHelpText>Describe any potential additional fees to LT not addressed above</inlineHelpText>
    <label>Additional Fees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>