force-app/main/default/objects/Preferred_vendor__c/fields/Asset_to_be_provided__c.field-meta.xml
<CustomField>
    <fullName>Asset_to_be_provided__c</fullName>
    <inlineHelpText>whar assetsor resources will you provide to help LT achieve its mission,target goals,and expand its market share</inlineHelpText>
    <label>Asset to be provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>