force-app/main/default/objects/Preferred_vendor__c/fields/Backorder_actual__c.field-meta.xml
<CustomField>
    <fullName>Backorder_actual__c</fullName>
    <label>Backorder actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>