force-app/main/default/objects/Preferred_vendor__c/fields/Backorder_standard__c.field-meta.xml
<CustomField>
    <fullName>Backorder_standard__c</fullName>
    <label>Backorder standard</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>