force-app/main/default/objects/Preferred_vendor__c/fields/Balance_sheet__c.field-meta.xml
<CustomField>
    <fullName>Balance_sheet__c</fullName>
    <label>Balance sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>