force-app/main/default/objects/Preferred_vendor__c/fields/Balance_Sheet_Reason__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sheet_Reason__c</fullName>
    <label>Balance Sheet Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>