force-app/main/default/objects/Preferred_vendor__c/fields/Central_ticketing_system__c.field-meta.xml
<CustomField>
    <fullName>Central_ticketing_system__c</fullName>
    <inlineHelpText>Is there a central ticket system or process for inquiry of issues</inlineHelpText>
    <label>Central ticketing system</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>