force-app/main/default/objects/Preferred_vendor__c/fields/Competitive_advantage__c.field-meta.xml
<CustomField>
    <fullName>Competitive_advantage__c</fullName>
    <inlineHelpText>What sets you apart from the competition. what is your competitive advantage that you bring to LT</inlineHelpText>
    <label>Competitive advantage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>