force-app/main/default/objects/Preferred_vendor__c/fields/Complement_Product_details__c.field-meta.xml
<CustomField>
    <fullName>Complement_Product_details__c</fullName>
    <inlineHelpText>Discuss how you will help to identify products that complement and enhance our current lineup and market presence</inlineHelpText>
    <label>Complement Product details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>