force-app/main/default/objects/Preferred_vendor__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Preferred vendors</relationshipLabel>
    <relationshipName>Preferred_vendors</relationshipName>
    <type>Lookup</type>
</CustomField>