force-app/main/default/objects/Preferred_vendor__c/fields/Corporate_Philosophy__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Philosophy__c</fullName>
    <inlineHelpText>What is your corporate philosophy around service of accounts</inlineHelpText>
    <label>Corporate Philosophy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>