force-app/main/default/objects/Preferred_vendor__c/fields/Cost_parameters__c.field-meta.xml
<CustomField>
    <fullName>Cost_parameters__c</fullName>
    <inlineHelpText>What are the cost parameters and specifically outlay the process and cost factors</inlineHelpText>
    <label>Cost parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>