force-app/main/default/objects/Preferred_vendor__c/fields/Custom_boards__c.field-meta.xml
<CustomField>
    <fullName>Custom_boards__c</fullName>
    <inlineHelpText>Can you provide custom boards to our specifications or are they standard issue</inlineHelpText>
    <label>Custom boards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>