force-app/main/default/objects/Preferred_vendor__c/fields/Delivery_delays_communication_method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_delays_communication_method__c</fullName>
    <inlineHelpText>How are delivery delays communicated to LT</inlineHelpText>
    <label>Delivery delays communication method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>