force-app/main/default/objects/Preferred_vendor__c/fields/Describe_build_schedule__c.field-meta.xml
<CustomField>
    <fullName>Describe_build_schedule__c</fullName>
    <inlineHelpText>Describe firm policy to meet build schedules of proposed national accounts and meet lead times</inlineHelpText>
    <label>Describe build schedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>