force-app/main/default/objects/Preferred_vendor__c/fields/Differentiate_Technology__c.field-meta.xml
<CustomField>
    <fullName>Differentiate_Technology__c</fullName>
    <inlineHelpText>Any other technology that differentiates you or is under development</inlineHelpText>
    <label>Differentiate Technology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>