force-app/main/default/objects/Preferred_vendor__c/fields/Directly_sell_to_dealer__c.field-meta.xml
<CustomField>
    <fullName>Directly_sell_to_dealer__c</fullName>
    <inlineHelpText>Do you or any of your affiliated companies sell directly to dealers or retail</inlineHelpText>
    <label>Directly sell to dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>