force-app/main/default/objects/Preferred_vendor__c/fields/Discontinued_Series__c.field-meta.xml
<CustomField>
    <fullName>Discontinued_Series__c</fullName>
    <label>Discontinued Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>