force-app/main/default/objects/Preferred_vendor__c/fields/Discuss_dev_and_design__c.field-meta.xml
<CustomField>
    <fullName>Discuss_dev_and_design__c</fullName>
    <inlineHelpText>Discuss your development and design team that makes your product development industry leaders</inlineHelpText>
    <label>Discuss dev. and design</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>