force-app/main/default/objects/Preferred_vendor__c/fields/Discuss_digital_Library__c.field-meta.xml
<CustomField>
    <fullName>Discuss_digital_Library__c</fullName>
    <inlineHelpText>Discuss your digital library and its availability to LT to utilize in its marketing efforts</inlineHelpText>
    <label>Discuss digital Library</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>