force-app/main/default/objects/Preferred_vendor__c/fields/Discuss_LT_Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Discuss_LT_Marketing_Plan__c</fullName>
    <inlineHelpText>Discuss the LT marketing plan you propose and include a well-defined budget to drive brand awareness</inlineHelpText>
    <label>Discuss LT Marketing Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>