force-app/main/default/objects/Preferred_vendor__c/fields/Discuss_real_estate_req__c.field-meta.xml
<CustomField>
    <fullName>Discuss_real_estate_req__c</fullName>
    <inlineHelpText>Discuss the real estate requirements within our showrooms and your expectations.</inlineHelpText>
    <label>Discuss real estate req.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>