force-app/main/default/objects/Preferred_vendor__c/fields/Discuss_Support_Prices__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Support_Prices__c</fullName>
    <inlineHelpText>Discuss your support pieces in trim and accessories Merchant</inlineHelpText>
    <label>Discuss Support Prices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>