force-app/main/default/objects/Preferred_vendor__c/fields/Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>