force-app/main/default/objects/Preferred_vendor__c/fields/Experience_in_multistate_distribution__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_multistate_distribution__c</fullName>
    <inlineHelpText>Does your company have experience with other multi-state and multi-branch distribution partners?</inlineHelpText>
    <label>Experience in multistate distribution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>