force-app/main/default/objects/Preferred_vendor__c/fields/experience_of_marketing_manager__c.field-meta.xml
<CustomField>
    <fullName>experience_of_marketing_manager__c</fullName>
    <inlineHelpText>Discuss the experience and process of your wholesaler/marketing manager and how they will develop the branches. What is the frequency of visits, methodology, provision of lead opportunities and responsiveness of this person</inlineHelpText>
    <label>experience of marketing manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>