force-app/main/default/objects/Preferred_vendor__c/fields/Firm_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Firm_Attention_To__c</fullName>
    <label>Firm Attention To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>