force-app/main/default/objects/Preferred_vendor__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <label>Firm Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>