force-app/main/default/objects/Preferred_vendor__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <formula>HYPERLINK($Label.Preferred_Vendor_RPF_link + &apos;?Id=&apos;+Id, &apos;Form URL&apos; ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form URL</label>
    <type>Text</type>
</CustomField>