force-app/main/default/objects/Preferred_vendor__c/fields/Freight_calculation__c.field-meta.xml
<CustomField>
    <fullName>Freight_calculation__c</fullName>
    <label>Freight calculation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>