force-app/main/default/objects/Preferred_vendor__c/fields/Freight_saving_program__c.field-meta.xml
<CustomField>
    <fullName>Freight_saving_program__c</fullName>
    <inlineHelpText>Describe your freight saving program available to LT</inlineHelpText>
    <label>Freight saving program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>