force-app/main/default/objects/Preferred_vendor__c/fields/Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge__c</fullName>
    <inlineHelpText>Describe your fuel surcharge program and how charges are calculated</inlineHelpText>
    <label>Fuel Surcharge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>