force-app/main/default/objects/Preferred_vendor__c/fields/Full_distribution_rights__c.field-meta.xml
<CustomField>
    <fullName>Full_distribution_rights__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirmation of full distribution rights in all states LT currently operating in</inlineHelpText>
    <label>Full distribution rights</label>
    <type>Checkbox</type>
</CustomField>