force-app/main/default/objects/Preferred_vendor__c/fields/Government_Legal_Action__c.field-meta.xml
<CustomField>
    <fullName>Government_Legal_Action__c</fullName>
    <inlineHelpText>Any government legal action currently pending or settled in past 5 years</inlineHelpText>
    <label>Government Legal Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>