force-app/main/default/objects/Preferred_vendor__c/fields/How_to_obtain_samples__c.field-meta.xml
<CustomField>
    <fullName>How_to_obtain_samples__c</fullName>
    <inlineHelpText>Can samples be obtained by the piece or are entire boxes required</inlineHelpText>
    <label>How to obtain samples</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>