force-app/main/default/objects/Preferred_vendor__c/fields/In_Person_marketing_efforts__c.field-meta.xml
<CustomField>
    <fullName>In_Person_marketing_efforts__c</fullName>
    <inlineHelpText>Discuss your in person marketing efforts for events, tradeshow, vendor showcase and other marketing opportunities</inlineHelpText>
    <label>In Person marketing efforts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>