force-app/main/default/objects/Preferred_vendor__c/fields/Insurance_carried__c.field-meta.xml
<CustomField>
    <fullName>Insurance_carried__c</fullName>
    <inlineHelpText>What level of E&amp;O or professional liability insurance do you carry?</inlineHelpText>
    <label>Insurance carried</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>