force-app/main/default/objects/Preferred_vendor__c/fields/Is_Submit__c.field-meta.xml
<CustomField>
    <fullName>Is_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submit</label>
    <type>Checkbox</type>
</CustomField>