force-app/main/default/objects/Preferred_vendor__c/fields/Last_FY_balance_sheet__c.field-meta.xml
<CustomField>
    <fullName>Last_FY_balance_sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please provide copy of 12/31/21 balance sheet</inlineHelpText>
    <label>Last FY balance sheet</label>
    <type>Checkbox</type>
</CustomField>