force-app/main/default/objects/Preferred_vendor__c/fields/Legal_Suite_Pending__c.field-meta.xml
<CustomField>
    <fullName>Legal_Suite_Pending__c</fullName>
    <inlineHelpText>Any customer or distributor legal suits currently pending or settled in past 5 years</inlineHelpText>
    <label>Legal Suite Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>