force-app/main/default/objects/Preferred_vendor__c/fields/List_of_costs_to_LT__c.field-meta.xml
<CustomField>
    <fullName>List_of_costs_to_LT__c</fullName>
    <inlineHelpText>List the costs to LT involved in this program</inlineHelpText>
    <label>List of costs to LT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>