force-app/main/default/objects/Preferred_vendor__c/fields/Logistics_and_Warehouse_plan__c.field-meta.xml
<CustomField>
    <fullName>Logistics_and_Warehouse_plan__c</fullName>
    <label>Logistics and Warehouse plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>