force-app/main/default/objects/Preferred_vendor__c/fields/Manufacture_total_revenue__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_total_revenue__c</fullName>
    <label>Manufacture total revenue %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>