force-app/main/default/objects/Preferred_vendor__c/fields/Manufacturer_Capacity_per_day__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Capacity_per_day__c</fullName>
    <inlineHelpText>What is your manufacturing capacity per day for any single SKU</inlineHelpText>
    <label>Manufacturer Capacity per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>