force-app/main/default/objects/Preferred_vendor__c/fields/Manufacturing_facility_video__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_facility_video__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please provide a short video of your manufacturing facility</inlineHelpText>
    <label>Manufacturing facility video</label>
    <type>Checkbox</type>
</CustomField>