force-app/main/default/objects/Preferred_vendor__c/fields/Marketing_support_provided__c.field-meta.xml
<CustomField>
    <fullName>Marketing_support_provided__c</fullName>
    <inlineHelpText>What marketing support (print, digital, media, ground, and collateral material) do you provide during a product launch</inlineHelpText>
    <label>Marketing support provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>