force-app/main/default/objects/Preferred_vendor__c/fields/Merchandising_Program__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Program__c</fullName>
    <inlineHelpText>Discuss your merchandising program, visualization tools, and digital tools such as QR codes or other tools to help in promotion and sales</inlineHelpText>
    <label>Merchandising Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>