force-app/main/default/objects/Preferred_vendor__c/fields/Merchandising_support__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_support__c</fullName>
    <inlineHelpText>Merchandising support is critical – discuss your approach to dealer boards, arch cards, binders and catalogs as well as any other merchandising support you would provide to LT as a Preferred Partner</inlineHelpText>
    <label>Merchandising support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>