force-app/main/default/objects/Preferred_vendor__c/fields/Minimum_Production__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Production__c</fullName>
    <label>Minimum Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>