force-app/main/default/objects/Preferred_vendor__c/fields/National_account_pricing__c.field-meta.xml
<CustomField>
    <fullName>National_account_pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Willing to provide National Account Pricing based on aggregate proposed volume and discounts?</inlineHelpText>
    <label>National account pricing</label>
    <type>Checkbox</type>
</CustomField>