force-app/main/default/objects/Preferred_vendor__c/fields/Online_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Online_Capabilities__c</fullName>
    <inlineHelpText>Describe your online capabilities to LT for reporting, payments, inventory, customer order tracking and status, freight, sales performance to track rebate status, and other critical elements</inlineHelpText>
    <label>Online Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>