force-app/main/default/objects/Preferred_vendor__c/fields/Packaging_and_handling_fees__c.field-meta.xml
<CustomField>
    <fullName>Packaging_and_handling_fees__c</fullName>
    <inlineHelpText>Describe your packaging and handling fees and parameters</inlineHelpText>
    <label>Packaging and handling fees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>