force-app/main/default/objects/Preferred_vendor__c/fields/Preferred_Partner_Ability__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Partner_Ability__c</fullName>
    <inlineHelpText>Please describe Preferred Partner ability to participate in this process and schedule</inlineHelpText>
    <label>Preferred Partner Ability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>