force-app/main/default/objects/Preferred_vendor__c/fields/Price_Increases__c.field-meta.xml
<CustomField>
    <fullName>Price_Increases__c</fullName>
    <label>Price Increases</label>
    <length>100</length>
    <type>Text</type>
</CustomField>