force-app/main/default/objects/Preferred_vendor__c/fields/Private_label_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Private_label_restrictions__c</fullName>
    <inlineHelpText>Describe any restrictions or items for attention in private label</inlineHelpText>
    <label>Private label restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>