force-app/main/default/objects/Preferred_vendor__c/fields/process_and_Policy__c.field-meta.xml
<CustomField>
    <fullName>process_and_Policy__c</fullName>
    <label>process and Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>