force-app/main/default/objects/Preferred_vendor__c/fields/Product_Launch_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch_Details__c</fullName>
    <inlineHelpText>Describe the typical product launch and how you envision working with LT to ensure a successful launch of new products -</inlineHelpText>
    <label>Product Launch Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>