force-app/main/default/objects/Preferred_vendor__c/fields/Product_Roadmap__c.field-meta.xml
<CustomField>
    <fullName>Product_Roadmap__c</fullName>
    <inlineHelpText>Discuss how you can provide and help develop a product roadmap and lifecycle to keep LT current and at the front of the development curve in new product offering</inlineHelpText>
    <label>Product Roadmap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>