force-app/main/default/objects/Preferred_vendor__c/fields/Quality_and_shading__c.field-meta.xml
<CustomField>
    <fullName>Quality_and_shading__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quality including shading and other defects</inlineHelpText>
    <label>Quality and shading</label>
    <type>Checkbox</type>
</CustomField>