force-app/main/default/objects/Preferred_vendor__c/fields/Rebate_Programs_Policy__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Programs_Policy__c</fullName>
    <inlineHelpText>List all eligible rebate programs/policy to LT and current schedule of rebates including any buyback on excess inventory or</inlineHelpText>
    <label>Rebate Programs Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>