force-app/main/default/objects/Preferred_vendor__c/fields/Ship_on_time_actual__c.field-meta.xml
<CustomField>
    <fullName>Ship_on_time_actual__c</fullName>
    <inlineHelpText>Ship on time actual (2020, 2021, YTD)</inlineHelpText>
    <label>Ship on time actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>