force-app/main/default/objects/Preferred_vendor__c/fields/Ship_on_time_standard__c.field-meta.xml
<CustomField>
    <fullName>Ship_on_time_standard__c</fullName>
    <inlineHelpText>Ship on time standard (what % of orders ship as promised)</inlineHelpText>
    <label>Ship on time standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>