force-app/main/default/objects/Preferred_vendor__c/fields/Shipment_type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_type__c</fullName>
    <inlineHelpText>Are shipments by job or mixed pallets?</inlineHelpText>
    <label>Shipment type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>