force-app/main/default/objects/Preferred_vendor__c/fields/SOP_for_remediation_for_Distributor__c.field-meta.xml
<CustomField>
    <fullName>SOP_for_remediation_for_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>detail SOP  for remediation by distributor&gt;ManuFacturer</inlineHelpText>
    <label>SOP for remediation for Distributor</label>
    <type>Checkbox</type>
</CustomField>