force-app/main/default/objects/Preferred_vendor__c/fields/SOP_for_remediation_for_manufacturer__c.field-meta.xml
<CustomField>
    <fullName>SOP_for_remediation_for_manufacturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOP for remediation for manufacturer</label>
    <type>Checkbox</type>
</CustomField>