force-app/main/default/objects/Preferred_vendor__c/fields/Special_Production__c.field-meta.xml
<CustomField>
    <fullName>Special_Production__c</fullName>
    <label>Special Production</label>
    <length>255</length>
    <type>Text</type>
</CustomField>