force-app/main/default/objects/Preferred_vendor__c/fields/Specific_SKUs_for_launch__c.field-meta.xml
<CustomField>
    <fullName>Specific_SKUs_for_launch__c</fullName>
    <inlineHelpText>Can we select specific SKU’s for the product launch or is it a set package</inlineHelpText>
    <label>Specific SKUs for launch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>