force-app/main/default/objects/Preferred_vendor__c/fields/Standard_purchasing_agreement__c.field-meta.xml
<CustomField>
    <fullName>Standard_purchasing_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please provide copy of standard purchasing agreement and current price list</inlineHelpText>
    <label>Standard purchasing agreement</label>
    <type>Checkbox</type>
</CustomField>