force-app/main/default/objects/Preferred_vendor__c/fields/Strategic_plan_for_LT_Business__c.field-meta.xml
<CustomField>
    <fullName>Strategic_plan_for_LT_Business__c</fullName>
    <inlineHelpText>Do you have a strategic plan in place to grow the LT business and revenues- if so please attach</inlineHelpText>
    <label>Strategic plan for LT Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>