force-app/main/default/objects/Preferred_vendor__c/fields/Support_LT_private_label__c.field-meta.xml
<CustomField>
    <fullName>Support_LT_private_label__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Willingness to support LT private label program</inlineHelpText>
    <label>Support LT private label</label>
    <type>Checkbox</type>
</CustomField>