force-app/main/default/objects/Preferred_vendor__c/fields/Terms_proposed__c.field-meta.xml
<CustomField>
    <fullName>Terms_proposed__c</fullName>
    <inlineHelpText>List terms proposed and confirmation of meeting minimum requirements listed above</inlineHelpText>
    <label>Terms proposed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>