force-app/main/default/objects/Preferred_vendor__c/fields/Third_party_revenue__c.field-meta.xml
<CustomField>
    <fullName>Third_party_revenue__c</fullName>
    <inlineHelpText>Do you outsource any of your product to third party manufacturers and if so what percentage of your total revenue comes from third party manufacturers?</inlineHelpText>
    <label>Third party revenue %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>