force-app/main/default/objects/Preferred_vendor__c/fields/Time_to_report_defects__c.field-meta.xml
<CustomField>
    <fullName>Time_to_report_defects__c</fullName>
    <inlineHelpText>Time to report defects for eligibility of guarantee</inlineHelpText>
    <label>Time to report defects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>