force-app/main/default/objects/Preferred_vendor__c/fields/Training_provided_Sales__c.field-meta.xml
<CustomField>
    <fullName>Training_provided_Sales__c</fullName>
    <inlineHelpText>What training do you provide to &gt; External Sales Team</inlineHelpText>
    <label>Training provided Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>