force-app/main/default/objects/Preferred_vendor__c/fields/Trainings_provides_designer__c.field-meta.xml
<CustomField>
    <fullName>Trainings_provides_designer__c</fullName>
    <inlineHelpText>What training do you provide to &gt; Showroom designer</inlineHelpText>
    <label>Trainings provides designer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>