force-app/main/default/objects/Preferred_vendor__c/fields/Uniform_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirmation of providing uniform pricing to LT on all SKU selected</inlineHelpText>
    <label>Uniform Pricing</label>
    <type>Checkbox</type>
</CustomField>