force-app/main/default/objects/Preferred_vendor__c/fields/Unique_and_innovative_solution__c.field-meta.xml
<CustomField>
    <fullName>Unique_and_innovative_solution__c</fullName>
    <inlineHelpText>We seek unique and innovative and solution-based product offerings please discuss how you differentiate yourself to help LT achieve this goal</inlineHelpText>
    <label>Unique and innovative solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>